# text-to-binary

./: .editorconfig  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  cliff.toml  clippy.toml  deny.toml  release.toml  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
analyze/: Cargo.toml
analyze/src/: diff.rs  float.rs  inspect.rs  lib.rs  stats.rs
benches/: encode.rs
binrs/: Cargo.toml
binrs/benches/: encode.rs
binrs/src/: main.rs
codec/: Cargo.toml
codec/src/: decode.rs  encode.rs  format.rs  lib.rs
codec/tests/: encode.rs
convert/: Cargo.toml
convert/src/: base.rs  checksum.rs  lib.rs
convert/tests/: checksum.rs
generate/: Cargo.toml
generate/src/: patterns.rs
ops/: Cargo.toml
ops/src/: bits.rs  bitwise.rs  field.rs  lib.rs  morton.rs  shift.rs
ops/tests/: ops.rs
src/: decode.rs  encode.rs  main.rs
tests/: checksum.rs  cli.rs  encode.rs  ops.rs
